--- a/data/XBee.tex
+++ b/data/XBee.tex
@@ -73,7 +73,7 @@ XBee无线模块的操作模式建立了用户或连接到XBee的任何微控制
 
 \section{AT Mode}
 
-在AT (Application Transparent) 透明操作模式下，无线模块接收的所有串行数据都排队等待RF传输。当模块接收到RF数据时，数据将通过串行接口发送出去。
+% 在AT (Application Transparent) 透明操作模式下，无线模块接收的所有串行数据都排队等待RF传输。当模块接收到RF数据时，数据将通过串行接口发送出去。
 
 要配置在AT中运行的XBee模块，必须将其置于命令模式下以发送配置命令。
 
