添加书脊 去除斜线表头

--- a/data/UI.tex
+++ b/data/UI.tex
@@ -53,7 +53,8 @@
     \centering
     \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
     \hline
-    \diagbox{迭代次数}{$Y_{i,j}$}{位移} %添加斜线表头
+    % \diagbox{迭代次数}{$Y_{i,j}$}{位移} %添加斜线表头
+    $Y_{i,j}$
        & 1  & 2  & 3  & 4   & d1 & d2 & d3  & d4  \\ \hline
     0  & 0  & 0  & 0  & 0   &    &    &     &     \\ \hline
     1  & 30 & 60 & 90 & 0   & 30 & 60 & 90  & 0   \\ \hline
@@ -78,7 +79,8 @@
     \centering
     \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
     \hline
-    \diagbox{迭代次数}{$Y_{i,j}$}{位移} %添加斜线表头
+    % \diagbox{迭代次数}{$Y_{i,j}$}{位移} %添加斜线表头
+    $Y_{i,j}$
       & 1  & 2  & 3  & 4   & d1 & d2 & d3  & d4  \\ \hline
     0 & 30 & 30 & 30 & 120 &    &    &     &     \\ \hline
     1 & 30 & 60 & 90 & 120 & 0  & 30 & 60  & 0   \\ \hline
