--- a/data/ack.tex
+++ b/data/ack.tex
@@ -1,15 +1,15 @@
 % 如果使用声明扫描页，将可选参数指定为扫描后的 PDF 文件名，例如：
 % \begin{acknowledgement}[scan-statement.pdf]
 \begin{acknowledgement}
-  衷心感谢导师钟海旺老师对本人的精心指导，他的言传身教将使我终生受益。
+  感谢导师钟海旺老师对本人的精心指导。
 
   % 感谢团队里的其他同学，目前来看，无论是作为工科的算法还是人机交互方向测试平台，这一平台有着广阔前景和无限可能，我也发现这一平台的有趣之处，希望未来能一起将这一项目继续做下去。
 
-  感谢清华大学未来实验室的米海鹏老师及其他老师同学们，在未来实验室SWARM集群小车项目组的开发工作引出了这一项目的构想，同时也拓宽了我在集群交互领域的视野。
+  感谢清华大学未来实验室的米海鹏老师及其他老师同学们，未来实验室拓展了我在集群交互领域的视野。
 
-  感谢清华大学天空工场学生兴趣团队和未来通信学生兴趣团队的同学，从大一起我在兴趣团队中积累了各种开发能力，结交了不同领域的朋友，这次做的项目用上了不少在兴趣团队中的积累，也得到了团队内朋友的帮助。
+  感谢清华大学天空工场学生兴趣团队和未来通信学生兴趣团队，我在兴趣团队中积累了各种开发能力。
 
-  感谢一路上所有帮助过我的朋友们。
+  感谢所有帮助过我的朋友们。
 
   % 感谢 \LaTeX 和 \thuthesis\cite{thuthesis}，帮我节省了不少时间。
 \end{acknowledgement}
