--- a/data/ack.tex
+++ b/data/ack.tex
@@ -9,6 +9,8 @@
 
   感谢清华大学天空工场学生兴趣团队和未来通信学生兴趣团队，我在兴趣团队中积累了各种开发能力。
 
+  感谢我的家人和女朋友的陪伴和支持。
+  
   感谢所有帮助过我的朋友们。
 
   % 感谢 \LaTeX 和 \thuthesis\cite{thuthesis}，帮我节省了不少时间。
